# flipcoin

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  genesis.json
.github/workflows/: rust.yml
balance/: Cargo.toml
balance/src/: lib.rs
block/: Cargo.toml
block/src/: block.rs  block_data.rs  block_storage.rs  lib.rs
block/tests/: block_storage.rs
chain/: Cargo.toml
chain/src/: lib.rs  model.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
db/: Cargo.toml
db/src/: lib.rs
db/tests/: db.rs
node/: Cargo.toml
node/src/: api.rs  cli.rs  config.rs  keystore.rs  lib.rs  main.rs  model.rs  node.rs  paths.rs  state.rs
p2p/: Cargo.toml
p2p/src/: config.rs  lib.rs  peer_behaviour.rs  runner.rs
pool/: Cargo.toml
pool/src/: lib.rs  model.rs
rpc/: Cargo.toml
rpc/src/: client.rs  error.rs  lib.rs  model.rs
state/: Cargo.toml
state/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
tx/: Cargo.toml
tx/src/: lib.rs  tx.rs  tx_storage.rs
tx/tests/: tx.rs  tx_storage.rs
utxo/: Cargo.toml
utxo/src/: lib.rs
validator/: Cargo.toml
validator/src/: validator.rs
voting/: Cargo.toml
voting/src/: lib.rs  state.rs  vote.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
