[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-rocksdb = { workspace = true }
common = { path = "../common" }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
