[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = { workspace = true }
block = { path = "../block" }
common = { path = "../common" }
futures = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tx = { path = "../tx" }
voting = { path = "../voting" }
wallet = { path = "../wallet" }
