[package]
name = "tx"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = { workspace = true }
common = { path = "../common" }
chrono = { workspace = true }
db = { path = "../db" }
num-bigint = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
utxo = { path = "../utxo" }
wallet = { path = "../wallet" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
