[package]
name = "voting"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = { workspace = true }
common = { path = "../common" }
db = { path = "../db" }
futures = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
wallet = { path = "../wallet" }
